[gd_scene load_steps=2 format=3 uid="uid://bhmqn72qje0s0"]

[ext_resource type="Script" path="res://scripts/goblin_cave.gd" id="1_goblin"]

[node name="GoblinCave" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goblin")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "üè∞ Caverna dos Goblins"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Dungeon - 3 inimigos + Chefe"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2

[node name="DungeonStatus" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Inimigos derrotados: 0/3"
horizontal_alignment = 1

[node name="EnemyInfoPanel" type="PanelContainer" parent="VBoxContainer/MarginContainer/ContentContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ContentContainer/EnemyInfoPanel"]
layout_mode = 2

[node name="EnemyName" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer/EnemyInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Aguardando..."
horizontal_alignment = 1

[node name="EnemyHP" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer/EnemyInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP: 0/0"
horizontal_alignment = 1

[node name="EnemyHPBar" type="ProgressBar" parent="VBoxContainer/MarginContainer/ContentContainer/EnemyInfoPanel/VBoxContainer"]
layout_mode = 2
show_percentage = false

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer/MarginContainer/ContentContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Iniciar Dungeon"

[node name="ReturnButton" type="Button" parent="VBoxContainer/MarginContainer/ContentContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Voltar"

[node name="CombatLog" type="PanelContainer" parent="VBoxContainer/MarginContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/ContentContainer/CombatLog"]
layout_mode = 2

[node name="LogLabel" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer/CombatLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bem-vindo √† Caverna dos Goblins!
Prepare-se para enfrentar 3 ondas de inimigos e o Rei Goblin!"
autowrap_mode = 3

[node name="RewardsPanel" type="PanelContainer" parent="VBoxContainer/MarginContainer/ContentContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ContentContainer/RewardsPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer/RewardsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üéâ Dungeon Completada!"
horizontal_alignment = 1

[node name="RewardsLabel" type="Label" parent="VBoxContainer/MarginContainer/ContentContainer/RewardsPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Recompensas obtidas:"
horizontal_alignment = 1
